Fix overflow of specials card

--- a/src/components/Specials.css
+++ b/src/components/Specials.css
@@ -14,7 +14,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  flex: 0 0 30%;
+  flex: 0 0 29%;
   gap: 1rem;
   background-color: var(--themehighlightlight);
   border-radius: var(--border-radius);
